[package]
name = "stepflow-serde"
description = "Stepflow support for Serde"
homepage = "https://stepflow.dev"
license = "Apache-2.0"
version = "0.0.3"
authors = ["John Wana <john@wana.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stepflow = { path = "../stepflow/stepflow", version = "0.0.4" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
stepflow-test-util = { path = "../stepflow/stepflow-test-util" }
serde_json = "1.0.61"
